# ai-videopipeline

./: .env.example  .gitignore  AGENTS.md  README.md  ai_video_pipeline.plan.md  pyproject.toml
config/: default.yaml
src/videopipeline/: __init__.py  cli.py  config.py  pipeline.py
src/videopipeline/assembler/: composer.py
src/videopipeline/generators/: AGENTS.md  audio.py  subtitle.py  text.py  video.py
src/videopipeline/models/: __init__.py  script.py
src/videopipeline/publishers/: base.py  bilibili.py  youtube.py
src/videopipeline/utils/: ffmpeg.py  storage.py
